--- a/Nodejs/Router/package.json
+++ b/Nodejs/Router/package.json
@@ -4,13 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npx nodemon -e js, html app.js"
+        "start": "npx nodemon js,html app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
+        "morgan": "^1.10.0",
         "nunjucks": "^3.2.3"
     }
 }
