Global 변수 알아보기

--- a/Nodejs/Router/package.json
+++ b/Nodejs/Router/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npx nodemon js,html app.js"
+        "start": "nodemon *.js, *.html, app.js"
     },
     "keywords": [],
     "author": "",
