--- a/Nodejs/fc-graphql/package.json
+++ b/Nodejs/fc-graphql/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^1.4.0",
+    "apollo-server-express": "^2.22.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "graphql": "^15.5.0",
     "graphql-tools": "^6.0.12"
   }
