--- a/Nodejs/fc-graphql/package.json
+++ b/Nodejs/fc-graphql/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "answer",
-  "version": "1.0.0",
-  "description": "REST API",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "apollo-server-express": "^2.22.2",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.5.0",
-    "graphql-tools": "^6.0.12"
-  }
+    "name": "answer",
+    "version": "1.0.0",
+    "description": "REST API",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "apollo-server-express": "^2.22.2",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "express-graphql": "^0.12.0",
+        "graphql": "^15.5.0",
+        "graphql-tools": "^6.0.12"
+    }
 }
