Make Map Success

--- a/Nodejs/PJ_Map/.env
+++ b/Nodejs/PJ_Map/.env
@@ -3,6 +3,6 @@ DB_USER = "root"
 DB_PASSWORD = "Ehdgus123!"
 DB_HOST = "localhost"
 
-KAKAO_JAVASCRIPT_KEY = "카카오맵 JavaScript 키"
-DEFAULT_LONGITUDE = "경도"
-DEFAULT_LATITUDE = "위도"
+KAKAO_JAVASCRIPT_KEY = "036696738dc93e339af1195c9e857611"
+DEFAULT_LONGITUDE = "127.0271839"
+DEFAULT_LATITUDE = "37.4955741"
