--- a/Express/package.json
+++ b/Express/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "helmet": "^4.6.0",
+    "serve-static": "^1.14.1"
   }
 }
