--- a/Express/package.json
+++ b/Express/package.json
@@ -13,6 +13,8 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "redis": "^3.1.2",
+    "redis-cluster": "0.0.8",
     "serve-static": "^1.14.1"
   }
 }
